tags/release-0.5/docsrc/docs.rst
===============
 Documentation
===============

Getting Started
---------------

* **Jump in** with :doc:`tutorials/index` to get you up and running
* **Ramp up** with :doc:`primers/index` to learn the core concepts behind GeoExt, ExtJS and OpenLayers


Examples
--------

Learn through the :ref:`examples <examples>`. Most of the Heron widgets and data components
have simple examples that demonstrate their use. By looking through the sources
for the examples, you can learn how to use Heron components in your
application.

Library Reference
-----------------

The :doc:`lib/index` covers details on developing with Heron.  Generated
from the comments in the code.


Participating in the Heron Community
-------------------------------------

For information about getting involved in the Heron community, :doc:`keep reading! <developer/index>`

   

 
