tags/release-1.0.5/docsrc/docs.rst
===============
 Documentation
===============

Getting Started
---------------

* Start with :doc:`tutorials/index` to get you up and running
* Follow the :doc:`tutorials/workshop` for more hands-on and background
* Read the :doc:`primers/heron-primer` to understand the concepts behind Heron
* See :doc:`primers/index` to learn the core concepts behind GeoExt, ExtJS and OpenLayers


Examples
--------

Learn through the :doc:`examples`. Most of the Heron widgets and data components
have simple examples that demonstrate their use. By looking through the
`examples' sources <http://code.google.com/p/geoext-viewer/source/browse/#svn%2Ftrunk%2Fheron%2Fexamples>`_
for the examples, you can learn how to build a Heron application. You may even take an example
as a starting point.

Library Reference
-----------------

The :doc:`lib/index` covers details on developing with Heron. Generated
from the comments in the code.

End-User Documentation
----------------------

Documentation for end-users (of Heron applications) is in progress.
As a start we have a `Heron End-User Manual (PDF Dutch) </_static/docs/handleiding_heron_nl.pdf>`_.

Participating in the Heron Community
-------------------------------------

For information about getting involved in the Heron community, :doc:`keep reading! <developer/index>`.

   

 
